# hamilbus

./: .gitignore  README.md  config.toml.example  main.py  pyproject.toml
.github/workflows/: ci.yml
src/hamilbus/: __init__.py  config.py  dataclasses.py  datamodels.py  distance_matrix.py  fake_network.py  graph_builder.py  helpers.py  main.py  path_reconstructor.py  pipeline.py  reader.py
src/hamilbus/data/: routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
src/hamilbus/solvers/: base_solver.py  or_tools_solver.py
src/hamilbus/visualization/: graph_visualizer.py  map_vizualizer.py
src/hamilbus/web/: __init__.py  app.py  serializers.py  server.py
src/hamilbus/web/static/: index.html
tests/: test_datamodels.py  test_distance.py  test_graph_builder.py  test_helpers.py  test_package.py  test_path_reconstructor.py  test_solvers.py  test_ui.py
visualization/: map_vizualizer.py
