[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hamilbus"
version = "0.1.0"
description = "Applying graph theory to a public transport network."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.3",
]

[tool.setuptools.packages.find]
where = ["src"]
