[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hamilbus"
version = "0.1.0"
description = "Applying graph theory to a public transport network."
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "fastapi",
    "networkx",
    "uvicorn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]

[tool.setuptools.packages.find]
where = ["src"]