[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hamilbus"
version = "0.1.0"
description = "Applying graph theory to a public transport network."
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "fastapi",
    "networkx",
    "uvicorn",
    "geopy",
    "tqdm",
    "numpy",
    "ortools>=9.15.6755",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:builtin type.*has no __module__:DeprecationWarning"
]